Temp fix horizontal overflow

--- a/view/src/components/DisplayPage/DisplayPage.scss
+++ b/view/src/components/DisplayPage/DisplayPage.scss
@@ -115,7 +115,7 @@ $display-section-border: 2px solid rgba($blue, 0.8);
   .graph-container {
     position: relative;
     width: 80%;
-    // max-width: 500px;
+    max-width: 800px;
     margin: auto;
   }
   .subgraph-container {
