--- a/view/src/components/EntityGraph/EntityGraph.scss
+++ b/view/src/components/EntityGraph/EntityGraph.scss
@@ -1,5 +1,5 @@
 .viz-container {
-  display: flex;
+  display: inline-flex;
 }
 .viz {
   flex: 1;
